--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="test-buttons">
             <a href="reaction-time.html" class="test-btn">Reaction Time Test</a>
-            <a href="sequencememory.html" class="test-btn">Sequence Memory Test</a>
+            <a href="sequence-memory.html" class="test-btn">Sequence Memory Test</a>
             <a href="aimtrainer.html" class="test-btn">Aim Trainer</a>
         </div>
     </main>
